2007-02-05  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/30189
	* gcc.dg/pr30189.c: New test.

2007-02-04  Steven G. Kargl <kargl@gcc.gnu.org>

	PR fortran/30605
	* gfortran.dg/spread_shape_1.f90: Remove tabs.
	* gfortran.dg/derived_init_2.f90: Ditto.
	* gfortran.dg/elemental_subroutine_3.f90: Ditto.
	* gfortran.dg/array_initializer_1.f90: Ditto.
	* gfortran.dg/do_2.f90: Ditto.
	* gfortran.dg/proc_assign_1.f90: Ditto.

2007-02-05  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	PR target/29682
	* gcc-target/ia64/pr29682.c: New test.

2007-02-04  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2007-01-30  Richard Guenther  <rguenther@suse.de>

	PR middle-end/27657
	* g++.dg/debug/pr27657.C: New testcase.

2007-02-03  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/30683
	* gfortran.dg/interface_10.f90: New test.

2007-02-02  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/28266
	* g++.dg/parse/defarg12.C: New test.

2007-02-02  Jakub Jelinek  <jakub@redhat.com>

	PR c++/30536
	* g++.dg/tls/diag-5.C: New test.

	PR middle-end/30473
	* gcc.dg/pr30473.c: New test.
	* gcc.c-torture/execute/20070201-1.c: New test.

2007-01-30  Geoffrey Keating  <geoffk@apple.com>

	* g++.dg/eh/simd-4.C (main): Also catch SIGSEGV.

2007-01-30  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from trunk
	PR libfortran/30525
	* gfortran.dg/char_comparison_1.f:  New test.

2007-01-30  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30313
	* gcc.dg/torture/pr30313.c: New testcase.

2007-01-30  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline.
	* gfortran.dg/gomp/gomp.exp: Support .f03 extension.
	* gfortran.dg/vect/vect.exp: Ditto.
	* gfortran.dg/dg.exp: Ditto.
	* gfortran.fortran-torture/execute/execute.exp: Ditto.
	* gfortran.fortran-torture/compile/compile.exp: Ditto.

2007-01-29  Roger Sayle  <roger@eyesopen.com>

	* gfortran.dg/forall_7.f90: New test case.

2007-01-29  Josh Conner  <jconner@apple.com>

	PR middle-end/29683
	* gcc.dg/pr29683.c: New.