@@ -1,3 +1,7 @@
+2007-02-07  Hans-Peter Nilsson  <hp@axis.com>
+
+	* lib/target-supports.exp (check_effective_target_simulator): New. 
+
 2007-02-05  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR debug/30189
